--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-See the BUGS.txt file for more information.
+Grav - A Gravity Simulation
+===========================
+
+Grav is a gravity simulation written in javascript using the HTML5 Canvas. Grav can be used on any modern browser (the latest versions of Firefox, Chrome, Safari, and Opera, and Internet Explorer 9). See bugs.txt for browser-specific bugs.
+
+Grav is also available as a webOS app for the Palm Pre and Palm Pixi phones. It is currently available only via Homebrew on [PreCentral](http://www.precentral.net/grav).
+
+For more information, please check the Wiki.
